<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_top_radius_15"
        tools:context=".ui.place.view.PlaceResultFilterFragment">

        <TextView
            android:id="@+id/tv_place_result_filter_feed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_40"
            android:text="@string/place_result_filter_feed"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_place_result_filter_feed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_32"
            android:background="@drawable/ic_check"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/tv_place_result_filter_feed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_place_result_filter_feed" />

        <TextView
            android:id="@+id/tv_place_result_filter_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_32"
            android:text="@string/place_result_filter_save"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_place_result_filter_feed" />

        <ImageView
            android:id="@+id/iv_place_result_filter_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_32"
            android:background="@drawable/ic_check"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/tv_place_result_filter_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_place_result_filter_save" />

        <TextView
            android:id="@+id/tv_place_result_filter_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_32"
            android:text="@string/place_result_filter_distance"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_place_result_filter_save" />

        <ImageView
            android:id="@+id/iv_place_result_filter_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_32"
            android:background="@drawable/ic_check"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/tv_place_result_filter_distance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_place_result_filter_distance" />

        <TextView
            android:id="@+id/tv_place_result_filter_apply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_40"
            android:background="@drawable/bg_quick_search_apply_default"
            android:paddingTop="17dp"
            android:paddingBottom="50dp"
            android:text="@string/quick_search_apply"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/tv_place_result_filter_distance" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
